fixed bug where uneeded scrollbar would appear

--- a/src/main/sass/foundation/sidebar.sass
+++ b/src/main/sass/foundation/sidebar.sass
@@ -41,7 +41,6 @@
     transition: margin 0.5s
 
     &Container
-        overflow-x: scroll
         width: auto
         position: sticky
         top: 20px
